Revision history for Async-Event-Interval

1.13 UNREL
    -

1.12    2022-03-31
    - Only remove the Async::Event::Interval protected shared %events hash
      if it contains any keys (ie. event objects). When running in things
      like 'plackup', END{} was being called on each browser session close,
      but there were still objects, so we were trashing the %events
      infrastructure prematurely
    - Each unit test file now does pre-and-post segment counts and displays
      them if PRINT_SEGS env var is true, and the suite itself has a before
      and after count comparison to ensure the suite leaked no segments or
      semaphores
    - Fix issue where we were trying to set a _pid() on an undefined value,
      causing IPC::Shareable to complain that "Can't STORE on undef val"

1.11    2022-03-09
    - Modified tests to run only on valid CI platforms

1.10    2022-03-07
    - Add tests to ensure that all shared memory segments created during the
      unit test suite run get cleaned up ok
    - Bump prereq of IPC::Shareable to 1.11 due to bug fix where child shared
      memory segments created under one process weren't being registered if the
      parent was created in a different process

1.09    2022-03-05
    - Bump prereq IPC::Shareable to 1.08 due to a fix in creating random SHM
      keys in forked environments, major improvements of its _shm_key_rand()
      function, and its ability to set a 'protected' option so our global shared
      %events hash doesn't get cleaned up automatically
    - Modified examples/shared.pl so it doesn't leak segments and semaphores
      after completion
    - We now remove %events hash in END instead of DESTROY. This way we can have
      objects go out of scope in a script without blowing away the global shared
      data
    - Added _end() so that we can test the END block in unit tests. END{} calls
      _end() upon program termination

1.08    2022-03-03
    - Added pid(), getter-only wrapper for _pid()